--- a/teammapper-frontend/src/index.html
+++ b/teammapper-frontend/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MindMapper</title>
+    <title>mindmapper</title>
     <base href="/" />
     <meta
       content="width=device-width, initial-scale=1, maximum-scale=1"
